--- a/src/Layout/Layout.module.less
+++ b/src/Layout/Layout.module.less
@@ -1,24 +1,30 @@
 
+
+.logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.sitelayout .sitelayoutbackground {
+  // height: 100vh;
+  background: #fff;
+}
+
+:global{
+  .ant-layout {
+    height: 100vh;
+  }
+  .ant-layout-header .trigger {
+    padding: 0 24px;
+    font-size: 18px;
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
+    float: left;
+  }
   
-    .trigger {
-      padding: 0 24px;
-      font-size: 18px;
-      line-height: 64px;
-      cursor: pointer;
-      transition: color 0.3s;
-    }
-  
-  
-.trigger:hover {
+  .trigger:hover {
     color: #1890ff;
   }
-  
-.logo {
-    height: 32px;
-    margin: 16px;
-    background: rgba(255, 255, 255, 0.3);
-  }
-  
-  .sitelayout .sitelayoutbackground {
-    background: #fff;
-  }
+}
